--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,32 +1,30 @@
-<div class="text-center">
-  <h1>Тестовое задание для E-Promo</h1>
-  <% unless @campaigns.empty? %>
-    <p>Токен: <strong><%= session[:api_token] %></strong></p>
-    <% ################################## %>
-    <h2>Campaigns</h2>
-    <% @campaigns.each do |campaign| %>
-      <ul>
-	<% campaign.keys.sort.each do |key| %>
-	  <li>
-	    <strong><%= key %>: </strong>
-	    <%= campaign[key] %>
-	  </li>
-	<% end %>
-      </ul><br>
-    <% end %>
-    <% ################################## %>
-    <h2>Keywords</h2>
-    <% @keywords.each do |keyword| %>
-      <ul>
-	<% keyword.keys.each do |key| %>
-	  <li>
-	    <strong><%= key %>: </strong>
-	    <%= keyword[key] %>
-	  </li>
-	<% end %>
-      </ul><br>
-    <% end %>
-  <% else %>
+<div class="container"><div class="row"><div class="col-md-6 col-md-offset-3">
+  <h1 class="text-center">Тестовое задание для E-Promo</h1>
+  <% if Rails.env.development? %>
+    <%= link_to "Получить данные для отчета", report_path, method: :put, class: 'btn btn-primary' %>
+  <% elsif Rails.env.production? %>
     <%= link_to "Получить данные для отчета", '/auth/yandex', class: 'btn btn-primary' %>
   <% end %>
-</div>
+  <% @campaigns.each do |campaign| %>
+    <ul>
+      <h2>Campaign</h2>
+      <% campaign.attributes.each do |key, value| %>
+	<li>
+	  <strong><%= key %>: </strong>
+	  <%= value %>
+	</li>
+      <% end %>
+    </ul><br>
+    <ul>
+      <h3>Keywords</h3>
+      <% campaign.keywords.each do |keyword| %>
+	<% keyword.attributes.each do |key, value| %>
+	  <li>
+	    <strong><%= key %>: </strong>
+	    <%= value %>
+	  </li>
+	<% end %>
+      <% end %>
+    </ul><br>
+  <% end %>
+</div></div></div>
