--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,39 @@
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+
+.header {
+  padding: 50px 0 20px 0;
+  border-bottom: 1px solid #dadada;
+}
+
+.buttons {
+  margin-top: 20px;
+  a {
+    min-width: 45%;
+  }
+  a#clear_db {
+    float: right;
+    &:hover, &:active {
+      @extend .btn-danger;
+    }
+  }
+}
+
+main {
+  margin-bottom: 40px;
+}
+
+footer {
+  @extend .text-center;
+  padding: 20px;
+}
+
+@media (max-width: 450px) {
+  .buttons {
+    a {
+      margin-top: 3px;
+      width: 100%;
+    }
+  }
+}
