--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,9 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
+$column_width: 20%;
+$model_name_width: 40% !important;
+
 .header {
   padding: 50px 0 20px 0;
   border-bottom: 1px solid #dadada;
@@ -36,15 +39,37 @@
 }
 
 main {
-  margin-bottom: 40px;
+  margin: 40px 0;
+  .panel-heading {
+    width: $column_width;
+  }
+  .model_name {
+    width: $model_name_width;
+  }
+  table {
+    td {
+      width: $column_width;
+    }
+  }
+  .collapse_container {
+    padding: 0 !important;
+    table {
+      margin: 0;
+    }
+  }
 }
 
 footer {
   @extend .text-center;
+  background-color: #fff;
+  border-top: 1px solid #dadada !important;
   padding: 20px;
 }
 
 @media (max-width: 450px) {
+  main {
+    margin: 60px 0;
+  }
   .buttons {
     a {
       margin-top: 3px;
