--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,7 +39,8 @@ $model_name_width: 40% !important;
 }
 
 main {
-  margin: 40px 0;
+  margin-top: 40px;
+  margin-bottom: 60px;
   .panel-heading {
     width: $column_width;
   }
@@ -72,9 +73,6 @@ footer {
 }
 
 @media (max-width: 450px) {
-  main {
-    margin: 60px 0;
-  }
   .buttons {
     a {
       margin-top: 3px;
